Added Shopping Cart events and entity structure together with Product Items logic. Renamed applications and set .gitattributes and .editorconfig