@@ -20,3 +20,13 @@ dependencies {
 tasks.named('test') {
     useJUnitPlatform()
 }
+
+tasks.withType(JavaCompile) {
+  options.compilerArgs += "--enable-preview"
+}
+tasks.withType(Test) {
+  jvmArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+  jvmArgs += "--enable-preview"
+}
